# my-open-claude

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs  env.example  release-please-config.json  your_program.sh
.codecrafters/: run.sh
.cursor/rules/: conventional-commits.mdc  project-structure.mdc  verify-build.mdc
.cursor/skills/rust-code-quality-analysis/: SKILL.md
.github/workflows/: ci.yml  release-please.yml  release.yml
config/: builtin-commands.json
docs/: ARCHITECTURE.md  RELEASING.md
src/: cli.rs  confirm.rs  main.rs  run.rs
src/core/: api_key.rs  app.rs  cli.rs  commands.rs  config.rs  confirm.rs  credits.rs  install.rs  llm.rs  message.rs  mod.rs  model_info.rs  models.rs  models_cache.rs  paths.rs  persistence.rs  templates.rs  update.rs  util.rs
src/core/history/: index.rs  mod.rs  storage.rs  tests.rs
src/core/llm/: agent_loop.rs  context.rs  error.rs  mod.rs  stream.rs  tool_execution.rs  undo.rs
src/core/models/: cache.rs  fetch.rs  info.rs  mod.rs
src/core/templates/: mod.rs  tests.rs  validation.rs
src/core/tools/: bash.rs  edit.rs  glob_tool.rs  grep.rs  ignore.rs  list_dir.rs  mod.rs  read.rs  write.rs
src/core/workspace/: mod.rs
src/features/: config.rs  llm.rs  mod.rs
src/features/tools/: bash.rs  mod.rs  read.rs  write.rs
src/tui/: app.rs  chat_result.rs  constants.rs  draw.rs  mod.rs  shortcuts.rs  syntax.rs  text.rs
src/tui/app/: messages.rs  mod.rs
src/tui/draw/: command_form_popup.rs  delete_command_popup.rs  header.rs  history.rs  (+6 more)
tests/: cli_integration.rs
(+19 files in other folders)
