[package]
name = "my-open-claude"
version = "0.4.0"
authors = ["polymorphl <lucterracher@gmail.com>"]
edition = "2024"
rust-version = "1.93"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
] } # async runtime
futures = "0.3" # StreamExt for create_stream_byot
tokio-util = "0.7" # CancellationToken for request cancellation
async-openai = { version = "=0.32.4", features = ["byot", "chat-completion"] }
clap = { version = "4.3.14", features = ["derive"] } # CLI argument parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149" # JSON serialization/deserialization
dotenv = "0.15.0"
ratatui = "0.30"
crossterm = "0.29"
arboard = "3"
openrouter-rs = "0.4"
opener = "0.7"
directories = "5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
regex = "1"
textwrap = "0.16"
walkdir = "2"
globset = "0.4"
log = "0.4"
env_logger = "0.11"
syntect = { version = "5", default-features = false, features = [
  "default-fancy",
] }
thiserror = "1"
self_update = { version = "0.36", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
] }
semver = "1"

[dev-dependencies]
tempfile = "3"
